--- a/app/src/main/res/layout/activity_step2.xml
+++ b/app/src/main/res/layout/activity_step2.xml
@@ -22,7 +22,7 @@
         app:layoutDescription="@xml/step2" >
 
     <ImageView
-        android:id="@+id/left_star2"
+            android:id="@+id/background"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
